<resources>
    <string name="app_name">Versteckt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="rsa_main_fragment_label">RSA Main</string>
    <string name="rsa_keys_fragment_label">RSA Keys</string>
    <string name="simple_encryptions_fragment_label">Simple Encryptions</string>
    <string name="simple_encryption_page_fragment_label">Simple Encryption Page</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="empty_string"> </string>
    <!-- Simple Encryption Page-->
    <string name="simple_encryption_page_header">Encryption-Method</string>
    <string name="simple_encryption_binary_header">Binary</string>
    <string name="simple_encryption_hexadecimal_header">Hexadecimal</string>
    <string name="simple_encryption_base64_header">Base64</string>
    <string name="simple_encrypt_text">Encrypt</string>
    <string name="simple_decrypt_text">Decrypt</string>
    <string name="back_simple_encryptions_page_button">Back to Encryptions Menu</string>
    <string name="paste_clipboard_button">Paste</string>
    <string name="copy_contents_button">Copy</string>
    <string name="delete_contents">Clear</string>
    <string name="copied_label">Copied Content</string>
    <!-- Simple Encryptions Page -->
    <string name="simple_encryptions_header">Simple Encryptions</string>
    <string name="base2_page_button">Binary</string>
    <string name="base16_page_button">Hexadecimal</string>
    <string name="base64_page_button">Base64</string>
    <string name="back_RSA_page_button">Back to RSA</string>
    <!-- RSA Main Page-->
    <string name="main_rsa_header">RSA</string>
    <string name="rsa_keys_page_button">Keys</string>
    <string name="rsa_encrypt_page_button">Encrypt / Decrypt</string>
    <string name="rsa_sign_page_button">Sign / Verify Signature</string>
    <string name="go_simple_encryptions_page_button">Simpler Encryptions</string>
    <!-- RSA Keys Page-->
    <string name="rsa_keys_page_header">Keys</string>
    <string name="rsa_keys_gen_new">Generate New Keypair</string>
    <string name="rsa_keys_copy_public">Copy Public Key</string>
    <string name="rsa_keys_generated_key_toast">Generated a new keypair</string>
    <string name="rsa_keys_no_keys_toast">You do not have a keypair generated yet</string>
</resources>